Add proxy container